my blog's theme

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,6 +1,7 @@
 <footer>
-  &copy; <%= date(new Date(), 'YYYY') %>
+  &copy; last modified: <%= date(new Date(), 'YYYY-MM-DD HH:mm:ss') %>
   <span class="author">
     <%= config.author || '' %>
   </span>
 </footer>
+
