--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -20,4 +20,9 @@
     <a href="#top" class="top"><%= __('Post.Top') %></a>
   </div>
 </article>
+
+<% if (page.mathjax){ %>
+	<%- partial('_partial/mathjax') %>
+<% } %>
+
 <%- partial('_partial/footer') %>
