--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,7 +9,7 @@
   }
 
   .subtitle {
-    font-size: 14px;
+    font-size: 18px;
     color: gray;
   }
 
@@ -27,10 +27,10 @@
     }
 
     .menu-item-link {
-      color: #999;
+      color: #666;
 
       &:hover {
-        color: #000;
+        color: #0F0;
       }
     }
   }
